feat: add landlord to contract
